--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .history
 .svn/
 
+
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -31,7 +33,8 @@
 /build/
 
 # Web related
-lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+/backend/node_modules
