--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,22 +14,25 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_screenutil: ^1.1.0
-  font_awesome_flutter: ^8.7.0
-  bubble: ^1.1.9+1
-  carousel_slider: ^1.4.1
+  flutter_screenutil: ^5.9.0
+  font_awesome_flutter: ^10.6.0
+  bubble: ^1.2.1
+  carousel_slider: ^5.0.0
+  http: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  flutter_tindercard: ^0.1.8
+  cupertino_icons: ^1.0.6
+  # Using appinio_swiper as modern alternative to flutter_tindercard
+  appinio_swiper: ^2.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.0
   
 
 # For information on the generic Dart part of this file, see the
